CELLINO/aims-gateway-main/k8s/developers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  template:
    spec:
      containers:
        - name: gateway
          image: us-central1-docker.pkg.dev/project-aims-dev/docker-registry-aims-dev/aims-gateway
